working data privacy

--- a/views/homepages/index-registration-period.ejs
+++ b/views/homepages/index-registration-period.ejs
@@ -74,7 +74,7 @@
           <br />
 
           <!-- The register button uses an id for stable reference -->
-          <button id="register-button" class="button-rounded-yellow" onclick="window.location.href='/auth/microsoft';">REGISTER NOW</button>
+          <button id="register-button" class="button-rounded-yellow" onclick="window.location.href='/data-privacy';">REGISTER NOW</button>
         </div>
 
         <div class="content-main-right">
