--- a/views/voter/review.ejs
+++ b/views/voter/review.ejs
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Voting System</title>
 
-    <link rel="stylesheet" type="text/css" href="voter/css/index_voter.css" />
+    <link rel="stylesheet" type="text/css" href="voter/css/index-voter.css" />
     <link rel="stylesheet" type="text/css" href="voter/css/review.css" />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Poppins:wght@400;700&display=swap" rel="stylesheet" />
   </head>
