--- a/views/admin/election-vote-tally.ejs
+++ b/views/admin/election-vote-tally.ejs
@@ -16,7 +16,7 @@
     <!-- Boxicons CDN Link -->
     <link href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=upins:wght@400;700&display=swap" rel="stylesheet" />
   </head>
 
@@ -85,8 +85,11 @@
         <p><strong>End Date:</strong> <%= endDate %></p>
       </div>
       <div class="header-user">
-        <img src="<%= loggedInAdmin.img %>" alt="Admin Profile" class="" />
-        <div class="admin-name"><%= loggedInAdmin.name %></div>
+        <img src="<%= loggedInAdmin.img %>" alt="Admin Profile" />
+        <div class="profile">
+          <div class="admin-name"><%= loggedInAdmin.name %></div>
+          <span class="job"><%= loggedInAdmin.role %></span>
+        </div>
         <div class="dropdown" onclick="toggleDropdown()"></div>
         <div class="dropdown-menu">
           <a href="/edit-account">View Account</a>
@@ -158,7 +161,7 @@
           </li>
 
           <li>
-            <div class="icon-link">
+            <div class="icon-link" id="active-tab">
               <a href="/voter-info">
                 <i class="fa fa-bar-chart"></i>
                 <span class="link_name">Election</span>
@@ -169,7 +172,7 @@
               <li><a class="link_name" href="/voter-info"><%= electionConfig.electionName || "No Election Ongoing" %></a></li>
               <li><a href="/voter-info">Voter Info</a></li>
               <li><a href="/voter-turnout">Voter Turnout</a></li>
-              <li><a href="/vote-tally">Vote Tally</a></li>
+              <li><a href="/vote-tally" id="active-sub">Vote Tally</a></li>
               <li><a href="/results">Results</a></li>
               <li><a href="/reset">Reset Election</a></li>
             </ul>
@@ -206,11 +209,12 @@
       <main class="main">
         <div class="title-container">
           <div class="r">
-            <i class="fa fa-cogs"></i>
+            <i class="fas fa-list-ol"></i>
             <h1 class="title">Vote Tally</h1>
           </div>
         </div>
         <hr class="title-line" />
+
         <div class="first-main">
           <div class="main-left">
             <h1 class="ssc">Supreme Student Council</h1>
