--- a/views/voter/register.ejs
+++ b/views/voter/register.ejs
@@ -26,16 +26,16 @@
 
     <div class="content">
       <div class="main-first">
-        <img src="../img/logo_bulsu.png" class="logo" alt="BulSU Logo" />
+        <img src="img/logo_bulsu.png" class="main-first-logo" alt="BulSU Logo" />
         <div class="first-text">
           <h2 class="title">BulSU Student Government Elections<br />2025 - 2026</h2>
         </div>
-        <img src="../img/logo_bulsu_ucse.png" class="logo" alt="BulSU UCSE Logo" />
+        <img src="img/logo_bulsu_ucse.png" class="main-first-logo" alt="BulSU UCSE Logo" />
       </div>
       <div class="main-second box-shadow">
         <form id="form-registration" action="/register" method="POST">
           <div class="row">
-            <img src="../img/voter-registration.png" />
+            <img src="img/voter-registration.png" />
             <h6>Voter Registration Form</h6>
           </div>
           <br />
