--- a/views/voter/vote.ejs
+++ b/views/voter/vote.ejs
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Voting System</title>
-
+    <link rel="stylesheet" type="text/css" href="css/index.css" />
     <link rel="stylesheet" type="text/css" href="voter/css/index-voter.css" />
     <link rel="stylesheet" type="text/css" href="voter/css/vote.css" />
     <link rel="stylesheet" type="text/css" href="voter/css/vote_choice.css" />
@@ -27,17 +27,12 @@
     </header>
 
     <div class="content">
-      <br />
-      <div class="content-header">
-        <div class="content-header-bulsu">
-          <img src="img/logo_bulsu.png" />
+      <div class="main-first">
+        <img src="img/logo_bulsu.png" class="main-first-logo" alt="BulSU Logo" />
+        <div class="first-text">
+          <h2 class="title">BulSU Student Government Elections<br />2025 - 2026</h2>
         </div>
-        <div class="content-header-text">
-          <h1>BulSU Student Government Elections<br />S.Y. 2025 - 2026</h1>
-        </div>
-        <div class="content-header-ucse">
-          <img src="img/logo_bulsu_ucse.png" />
-        </div>
+        <img src="img/logo_bulsu_ucse.png" class="main-first-logo" alt="BulSU UCSE Logo" />
       </div>
       <form action="/review" method="POST" id="voteForm">
         <div class="content-main">
@@ -54,7 +49,8 @@
             <h3 class="ballot-header ballot-position">President</h3>
             <br />
             <div id="ballot-president" class="ballot-choices">
-              <% let abstainPresident = null; %> <% const filteredPresidentCandidates = presidentCandidates.filter(function(candidate) { if(candidate.name.toLowerCase() === 'abstain'){ abstainPresident = candidate; return false; } return true; }); %> <% filteredPresidentCandidates.forEach(function(candidate, index) { %>
+              <% let abstainPresident = null; %> <% const filteredPresidentCandidates = presidentCandidates.filter(function(candidate) { if(candidate.name.toLowerCase() === 'abstain'){ abstainPresident = candidate; return false; } return true; }); %> <%
+              filteredPresidentCandidates.forEach(function(candidate, index) { %>
               <div class="label-container label-president">
                 <input class="ballot-choice candidate-radio" data-group="president" id="president-<%= index %>" type="radio" name="president" value="<%= JSON.stringify(candidate) %>" />
                 <label class="ballot-tile" for="president-<%= index %>">
@@ -79,7 +75,8 @@
             <h3 class="ballot-header ballot-position">Vice President</h3>
             <br />
             <div id="ballot-vice-president" class="ballot-choices">
-              <% let abstainVicePresident = null; %> <% const filteredVicePresidentCandidates = vicePresidentCandidates.filter(function(candidate) { if(candidate.name.toLowerCase() === 'abstain'){ abstainVicePresident = candidate; return false; } return true; }); %> <% filteredVicePresidentCandidates.forEach(function(candidate, index) { %>
+              <% let abstainVicePresident = null; %> <% const filteredVicePresidentCandidates = vicePresidentCandidates.filter(function(candidate) { if(candidate.name.toLowerCase() === 'abstain'){ abstainVicePresident = candidate; return false; } return true; }); %> <%
+              filteredVicePresidentCandidates.forEach(function(candidate, index) { %>
               <div class="label-container label-vice-president">
                 <input class="ballot-choice candidate-radio" data-group="vicePresident" id="vice-president-<%= index %>" type="radio" name="vicePresident" value="<%= JSON.stringify(candidate) %>" />
                 <label class="ballot-tile" for="vice-president-<%= index %>">
@@ -102,7 +99,8 @@
             <!-- Senator Candidates -->
             <h3 class="ballot-header ballot-position">Senators</h3>
             <div id="ballot-senator" class="ballot-choices">
-              <% let abstainSenator = null; %> <% const filteredSenatorCandidates = senatorCandidates.filter(function(candidate) { if(candidate.name.toLowerCase() === 'abstain'){ abstainSenator = candidate; return false; } return true; }); %> <% filteredSenatorCandidates.forEach(function(candidate, index) { %> <% console.log(abstainSenator) %>
+              <% let abstainSenator = null; %> <% const filteredSenatorCandidates = senatorCandidates.filter(function(candidate) { if(candidate.name.toLowerCase() === 'abstain'){ abstainSenator = candidate; return false; } return true; }); %> <% filteredSenatorCandidates.forEach(function(candidate,
+              index) { %> <% console.log(abstainSenator) %>
               <div class="label-container label-senator">
                 <input class="ballot-choice candidate-radio" data-group="senator" id="senator-<%= index %>" type="checkbox" name="senator" value="<%= JSON.stringify(candidate) %>" />
                 <label class="ballot-tile" for="senator-<%= index %>">
@@ -124,7 +122,7 @@
           <!-- Local Student Council Section -->
           <div class="ballot ballot-lsc">
             <br />
-            <h3 class="ballot-header ballot-council">Local Student Council - [Voter College]</h3>
+            <h3 class="ballot-header ballot-lsc-council">Local Student Council - [Voter College]</h3>
             <br />
             <br />
 
@@ -132,7 +130,8 @@
             <h3 class="ballot-header ballot-position">Governor</h3>
             <br />
             <div id="ballot-governor" class="ballot-choices">
-              <% let abstainGovernor = null; %> <% const filteredGovernorCandidates = governorCandidates.filter(function(candidate) { if(candidate.name.toLowerCase() === 'abstain'){ abstainGovernor = candidate; return false; } return true; }); %> <% filteredGovernorCandidates.forEach(function(candidate, index) { %>
+              <% let abstainGovernor = null; %> <% const filteredGovernorCandidates = governorCandidates.filter(function(candidate) { if(candidate.name.toLowerCase() === 'abstain'){ abstainGovernor = candidate; return false; } return true; }); %> <%
+              filteredGovernorCandidates.forEach(function(candidate, index) { %>
               <div class="label-container label-governor">
                 <input class="ballot-choice candidate-radio" data-group="governor" id="governor-<%= index %>" type="radio" name="governor" value="<%= JSON.stringify(candidate) %>" />
                 <label class="ballot-tile" for="governor-<%= index %>">
@@ -156,7 +155,8 @@
             <h3 class="ballot-header ballot-position">Vice Governor</h3>
             <br />
             <div id="ballot-vice-governor" class="ballot-choices">
-              <% let abstainViceGovernor = null; %> <% const filteredViceGovernorCandidates = viceGovernorCandidates.filter(function(candidate) { if(candidate.name.toLowerCase() === 'abstain'){ abstainViceGovernor = candidate; return false; } return true; }); %> <% filteredViceGovernorCandidates.forEach(function(candidate, index) { %>
+              <% let abstainViceGovernor = null; %> <% const filteredViceGovernorCandidates = viceGovernorCandidates.filter(function(candidate) { if(candidate.name.toLowerCase() === 'abstain'){ abstainViceGovernor = candidate; return false; } return true; }); %> <%
+              filteredViceGovernorCandidates.forEach(function(candidate, index) { %>
               <div class="label-container label-vice-governor">
                 <input class="ballot-choice candidate-radio" data-group="viceGovernor" id="vice-governor-<%= index %>" type="radio" name="viceGovernor" value="<%= JSON.stringify(candidate) %>" />
                 <label class="ballot-tile" for="vice-governor-<%= index %>">
@@ -180,7 +180,8 @@
             <h3 class="ballot-header ballot-position">Board Member</h3>
             <br />
             <div id="ballot-board-member" class="ballot-choices">
-              <% let abstainBoardMember = null; %> <% const filteredBoardCandidates = boardCandidates.filter(function(candidate) { if(candidate.name.toLowerCase() === 'abstain'){ abstainBoardMember = candidate; return false; } return true; }); %> <% filteredBoardCandidates.forEach(function(candidate, index) { %>
+              <% let abstainBoardMember = null; %> <% const filteredBoardCandidates = boardCandidates.filter(function(candidate) { if(candidate.name.toLowerCase() === 'abstain'){ abstainBoardMember = candidate; return false; } return true; }); %> <%
+              filteredBoardCandidates.forEach(function(candidate, index) { %>
               <div class="label-container label-board-member">
                 <input class="ballot-choice candidate-radio" data-group="boardMember" id="board-member-<%= index %>" type="radio" name="boardMember" value="<%= JSON.stringify(candidate) %>" />
                 <label class="ballot-tile" for="board-member-<%= index %>">
@@ -213,7 +214,9 @@
                   <div class="folder">
                     <div class="top">
                       <svg viewBox="0 0 24 27">
-                        <path d="M1,0 L23,0 C23.5522847,-1.01453063e-16 24,0.44771525 24,1 L24,8.17157288 C24,8.70200585 23.7892863,9.21071368 23.4142136,9.58578644 L20.5857864,12.4142136 C20.2107137,12.7892863 20,13.2979941 20,13.8284271 L20,26 C20,26.5522847 19.5522847,27 19,27 L1,27 C0.44771525,27 6.76353751e-17,26.5522847 0,26 L0,1 C-6.76353751e-17,0.44771525 0.44771525,1.01453063e-16 1,0 Z"></path>
+                        <path
+                          d="M1,0 L23,0 C23.5522847,-1.01453063e-16 24,0.44771525 24,1 L24,8.17157288 C24,8.70200585 23.7892863,9.21071368 23.4142136,9.58578644 L20.5857864,12.4142136 C20.2107137,12.7892863 20,13.2979941 20,13.8284271 L20,26 C20,26.5522847 19.5522847,27 19,27 L1,27 C0.44771525,27 6.76353751e-17,26.5522847 0,26 L0,1 C-6.76353751e-17,0.44771525 0.44771525,1.01453063e-16 1,0 Z"
+                        ></path>
                       </svg>
                     </div>
                     <div class="paper"></div>
