--- a/views/admin/admin-login.ejs
+++ b/views/admin/admin-login.ejs
@@ -35,9 +35,8 @@
         <h3>ONLINE VOTING SYSTEM FOR THE STUDENT GOVERNMENT ELECTIONS AT BULACAN STATE UNIVERSITY</h3>
       </div>
       <div class="content-main">
-        <br />
-        <div class="card">
-          <h1 class="title">Admin Login</h1>
+        <div class="card box-shadow">
+          <h2 class="red">Admin Login</h2>
           <form action="/admin-login" method="POST">
             <div class="field">
               <svg class="input-icon" viewBox="0 0 500 500" xmlns="http://www.w3.org/2000/svg">
@@ -46,13 +45,13 @@
                 ></path>
               </svg>
               <!-- Changed field to use username -->
-              <input autocomplete="off" id="logusername" placeholder="Username" class="input-field" name="username" type="text" required />
+              <input autocomplete="off" id="logusername" placeholder="Type your email here..." class="input-field" name="username" type="text" required />
             </div>
             <div class="field">
               <svg class="input-icon" viewBox="0 0 500 500" xmlns="http://www.w3.org/2000/svg">
                 <path d="M80 192V144C80 64.47 144.5 0 224 0C303.5 0 368 64.47 368 144V192H384C419.3 192 448 220.7 448 256V448C448 483.3 419.3 512 384 512H64C28.65 512 0 483.3 0 448V256C0 220.7 28.65 192 64 192H80zM144 192H304V144C304 99.82 268.2 64 224 64C179.8 64 144 99.82 144 144V192z"></path>
               </svg>
-              <input autocomplete="off" id="logpass" placeholder="Password" class="input-field" name="password" type="password" required />
+              <input autocomplete="off" id="logpass" placeholder="Type your password here..." class="input-field" name="password" type="password" required />
             </div>
             <button class="btn" type="submit">Login</button>
             <a href="#" class="btn-link">Forgot your password?</a>
