--- a/views/voter/review.ejs
+++ b/views/voter/review.ejs
@@ -17,26 +17,37 @@
       </div>
       <nav class="header-nav">
         <ul class="header-nav-content">
-          <li><a href="/vote">Vote</a></li>
-          <li><a href="/review" id="active-link">Review</a></li>
-          <li><a href="verify.html">Verify</a></li>
+          <li id="active-link">Vote</li>
+          <p>|</p>
+          <li>Review</li>
+          <p>|</p>
+          <li>Verify</li>
+          <div class="dropdown">
+            <div class="settings">
+              <i class="fa-solid fa-user"></i>
+              <button class="dropdown-toggle">
+                <i class="fas fa-caret-down"></i>
+              </button>
+
+              <div class="dropdown-menu">
+                <a href="#">Logged in as <span>Microsoft Email</span></a>
+                <a href="#">Log Out</a>
+              </div>
+            </div>
+          </div>
         </ul>
       </nav>
+
       <div class="header-bottom-line"></div>
     </header>
 
     <div class="content">
-      <br />
-      <div class="content-header">
-        <div class="content-header-bulsu">
-          <img src="img/logo_bulsu.png" />
+      <div class="main-first">
+        <img src="img/logo_bulsu.png" class="main-first-logo" alt="BulSU Logo" />
+        <div class="first-text">
+          <h2 class="title">BulSU Student Government Elections<br />2025 - 2026</h2>
         </div>
-        <div class="content-header-text">
-          <h1>BulSU Student Government Elections<br />S.Y. 2025 - 2026</h1>
-        </div>
-        <div class="content-header-ucse">
-          <img src="img/logo_bulsu_ucse.png" />
-        </div>
+        <img src="img/logo_bulsu_ucse.png" class="main-first-logo" alt="BulSU UCSE Logo" />
       </div>
 
       <div class="content-main">
