--- a/views/voter/review.ejs
+++ b/views/voter/review.ejs
@@ -196,8 +196,10 @@
             <input type="hidden" name="senator" value="<%= JSON.stringify(senator) %>" />
             <input type="hidden" name="governor" value="<%= JSON.stringify(governor) %>" />
             <input type="hidden" name="viceGovernor" value="<%= JSON.stringify(viceGovernor) %>" />
-            <input type="hidden" name="boardMember" value="<%= JSON.stringify(boardMember) %>" />
-
+            <input type="hidden" name="boardMember" value="<%= JSON.stringify(boardMember) %>" />\
+            <input type="hidden" name="college" value="<%= college %>" />
+            <input type="hidden" name="program" value="<%= program %>" />
+            <input type="hidden" name="email" value="<%= email %>" />
             <!-- Submit button -->
             <div class="button-container">
               <button class="button-back" type="button" onclick="window.location.href='/vote'">
