--- a/views/voter/vote.ejs
+++ b/views/voter/vote.ejs
@@ -49,8 +49,7 @@
             <h3 class="ballot-header ballot-position">President</h3>
             <br />
             <div id="ballot-president" class="ballot-choices">
-              <% let abstainPresident = null; %> <% const filteredPresidentCandidates = presidentCandidates.filter(function(candidate) { if(candidate.name.toLowerCase() === 'abstain'){ abstainPresident = candidate; return false; } return true; }); %> <%
-              filteredPresidentCandidates.forEach(function(candidate, index) { %>
+              <% let abstainPresident = null; %> <% const filteredPresidentCandidates = presidentCandidates.filter(function(candidate) { if(candidate.name.toLowerCase() === 'abstain'){ abstainPresident = candidate; return false; } return true; }); %> <% filteredPresidentCandidates.forEach(function(candidate, index) { %>
               <div class="label-container label-president">
                 <input class="ballot-choice candidate-radio" data-group="president" id="president-<%= index %>" type="radio" name="president" value="<%= JSON.stringify(candidate) %>" />
                 <label class="ballot-tile" for="president-<%= index %>">
@@ -65,8 +64,8 @@
             </div>
             <br />
             <div class="checkbox-wrapper-10">
-              <!-- Change abstain input to checkbox -->
-              <input type="checkbox" id="abstain-president" data-group="president" name="president" value="<%= JSON.stringify(abstainPresident) %>" class="tgl tgl-flip abstain-checkbox" />
+              <!-- Remove name attribute from the abstain checkbox -->
+              <input type="checkbox" id="abstain-president" data-group="president" value="<%= JSON.stringify(abstainPresident) %>" class="tgl tgl-flip abstain-checkbox" />
               <label for="abstain-president" data-tg-on="I will vote!" data-tg-off="Abstain" class="tgl-btn"></label>
             </div>
             <br />
@@ -75,8 +74,7 @@
             <h3 class="ballot-header ballot-position">Vice President</h3>
             <br />
             <div id="ballot-vice-president" class="ballot-choices">
-              <% let abstainVicePresident = null; %> <% const filteredVicePresidentCandidates = vicePresidentCandidates.filter(function(candidate) { if(candidate.name.toLowerCase() === 'abstain'){ abstainVicePresident = candidate; return false; } return true; }); %> <%
-              filteredVicePresidentCandidates.forEach(function(candidate, index) { %>
+              <% let abstainVicePresident = null; %> <% const filteredVicePresidentCandidates = vicePresidentCandidates.filter(function(candidate) { if(candidate.name.toLowerCase() === 'abstain'){ abstainVicePresident = candidate; return false; } return true; }); %> <% filteredVicePresidentCandidates.forEach(function(candidate, index) { %>
               <div class="label-container label-vice-president">
                 <input class="ballot-choice candidate-radio" data-group="vicePresident" id="vice-president-<%= index %>" type="radio" name="vicePresident" value="<%= JSON.stringify(candidate) %>" />
                 <label class="ballot-tile" for="vice-president-<%= index %>">
@@ -91,7 +89,7 @@
             </div>
             <br />
             <div class="checkbox-wrapper-10">
-              <input type="checkbox" id="abstain-vice-president" data-group="vicePresident" name="vicePresident" value="<%= JSON.stringify(abstainVicePresident) %>" class="tgl tgl-flip abstain-checkbox" />
+              <input type="checkbox" id="abstain-vice-president" data-group="vicePresident" value="<%= JSON.stringify(abstainVicePresident) %>" class="tgl tgl-flip abstain-checkbox" />
               <label for="abstain-vice-president" data-tg-on="I will vote!" data-tg-off="Abstain" class="tgl-btn"></label>
             </div>
             <br />
@@ -99,8 +97,7 @@
             <!-- Senator Candidates -->
             <h3 class="ballot-header ballot-position">Senators</h3>
             <div id="ballot-senator" class="ballot-choices">
-              <% let abstainSenator = null; %> <% const filteredSenatorCandidates = senatorCandidates.filter(function(candidate) { if(candidate.name.toLowerCase() === 'abstain'){ abstainSenator = candidate; return false; } return true; }); %> <% filteredSenatorCandidates.forEach(function(candidate,
-              index) { %> <% console.log(abstainSenator) %>
+              <% let abstainSenator = null; %> <% const filteredSenatorCandidates = senatorCandidates.filter(function(candidate) { if(candidate.name.toLowerCase() === 'abstain'){ abstainSenator = candidate; return false; } return true; }); %> <% filteredSenatorCandidates.forEach(function(candidate, index) { %>
               <div class="label-container label-senator">
                 <input class="ballot-choice candidate-radio" data-group="senator" id="senator-<%= index %>" type="checkbox" name="senator" value="<%= JSON.stringify(candidate) %>" />
                 <label class="ballot-tile" for="senator-<%= index %>">
@@ -114,8 +111,7 @@
               <% }); %>
             </div>
             <br />
-            <!-- For senators, there is no separate abstain checkbox in the UI,
-           but we will handle it in the submission script if none is selected -->
+            <!-- Note: For senators, no separate abstain checkbox in the UI -->
           </div>
           <br />
 
@@ -123,15 +119,13 @@
           <div class="ballot ballot-lsc">
             <br />
             <h3 class="ballot-header ballot-lsc-council">Local Student Council - [Voter College]</h3>
-            <br />
-            <br />
+            <br /><br />
 
             <!-- Governor Candidates -->
             <h3 class="ballot-header ballot-position">Governor</h3>
             <br />
             <div id="ballot-governor" class="ballot-choices">
-              <% let abstainGovernor = null; %> <% const filteredGovernorCandidates = governorCandidates.filter(function(candidate) { if(candidate.name.toLowerCase() === 'abstain'){ abstainGovernor = candidate; return false; } return true; }); %> <%
-              filteredGovernorCandidates.forEach(function(candidate, index) { %>
+              <% let abstainGovernor = null; %> <% const filteredGovernorCandidates = governorCandidates.filter(function(candidate) { if(candidate.name.toLowerCase() === 'abstain'){ abstainGovernor = candidate; return false; } return true; }); %> <% filteredGovernorCandidates.forEach(function(candidate, index) { %>
               <div class="label-container label-governor">
                 <input class="ballot-choice candidate-radio" data-group="governor" id="governor-<%= index %>" type="radio" name="governor" value="<%= JSON.stringify(candidate) %>" />
                 <label class="ballot-tile" for="governor-<%= index %>">
@@ -146,7 +140,7 @@
             </div>
             <br />
             <div class="checkbox-wrapper-10">
-              <input type="checkbox" id="abstain-governor" data-group="governor" name="governor" value="<%= JSON.stringify(abstainGovernor) %>" class="tgl tgl-flip abstain-checkbox" />
+              <input type="checkbox" id="abstain-governor" data-group="governor" value="<%= JSON.stringify(abstainGovernor) %>" class="tgl tgl-flip abstain-checkbox" />
               <label for="abstain-governor" data-tg-on="I will vote!" data-tg-off="Abstain" class="tgl-btn"></label>
             </div>
             <br />
@@ -155,8 +149,7 @@
             <h3 class="ballot-header ballot-position">Vice Governor</h3>
             <br />
             <div id="ballot-vice-governor" class="ballot-choices">
-              <% let abstainViceGovernor = null; %> <% const filteredViceGovernorCandidates = viceGovernorCandidates.filter(function(candidate) { if(candidate.name.toLowerCase() === 'abstain'){ abstainViceGovernor = candidate; return false; } return true; }); %> <%
-              filteredViceGovernorCandidates.forEach(function(candidate, index) { %>
+              <% let abstainViceGovernor = null; %> <% const filteredViceGovernorCandidates = viceGovernorCandidates.filter(function(candidate) { if(candidate.name.toLowerCase() === 'abstain'){ abstainViceGovernor = candidate; return false; } return true; }); %> <% filteredViceGovernorCandidates.forEach(function(candidate, index) { %>
               <div class="label-container label-vice-governor">
                 <input class="ballot-choice candidate-radio" data-group="viceGovernor" id="vice-governor-<%= index %>" type="radio" name="viceGovernor" value="<%= JSON.stringify(candidate) %>" />
                 <label class="ballot-tile" for="vice-governor-<%= index %>">
@@ -171,7 +164,7 @@
             </div>
             <br />
             <div class="checkbox-wrapper-10">
-              <input type="checkbox" id="abstain-vice-governor" data-group="viceGovernor" name="viceGovernor" value="<%= JSON.stringify(abstainViceGovernor) %>" class="tgl tgl-flip abstain-checkbox" />
+              <input type="checkbox" id="abstain-vice-governor" data-group="viceGovernor" value="<%= JSON.stringify(abstainViceGovernor) %>" class="tgl tgl-flip abstain-checkbox" />
               <label for="abstain-vice-governor" data-tg-on="I will vote!" data-tg-off="Abstain" class="tgl-btn"></label>
             </div>
             <br />
@@ -180,8 +173,7 @@
             <h3 class="ballot-header ballot-position">Board Member</h3>
             <br />
             <div id="ballot-board-member" class="ballot-choices">
-              <% let abstainBoardMember = null; %> <% const filteredBoardCandidates = boardCandidates.filter(function(candidate) { if(candidate.name.toLowerCase() === 'abstain'){ abstainBoardMember = candidate; return false; } return true; }); %> <%
-              filteredBoardCandidates.forEach(function(candidate, index) { %>
+              <% let abstainBoardMember = null; %> <% const filteredBoardCandidates = boardCandidates.filter(function(candidate) { if(candidate.name.toLowerCase() === 'abstain'){ abstainBoardMember = candidate; return false; } return true; }); %> <% filteredBoardCandidates.forEach(function(candidate, index) { %>
               <div class="label-container label-board-member">
                 <input class="ballot-choice candidate-radio" data-group="boardMember" id="board-member-<%= index %>" type="radio" name="boardMember" value="<%= JSON.stringify(candidate) %>" />
                 <label class="ballot-tile" for="board-member-<%= index %>">
@@ -196,7 +188,7 @@
             </div>
             <br />
             <div class="checkbox-wrapper-10">
-              <input type="checkbox" id="abstain-board-member" data-group="boardMember" name="boardMember" value="<%= JSON.stringify(abstainBoardMember) %>" class="tgl tgl-flip abstain-checkbox" />
+              <input type="checkbox" id="abstain-board-member" data-group="boardMember" value="<%= JSON.stringify(abstainBoardMember) %>" class="tgl tgl-flip abstain-checkbox" />
               <label for="abstain-board-member" data-tg-on="I will vote!" data-tg-off="Abstain" class="tgl-btn"></label>
             </div>
 
@@ -214,9 +206,7 @@
                   <div class="folder">
                     <div class="top">
                       <svg viewBox="0 0 24 27">
-                        <path
-                          d="M1,0 L23,0 C23.5522847,-1.01453063e-16 24,0.44771525 24,1 L24,8.17157288 C24,8.70200585 23.7892863,9.21071368 23.4142136,9.58578644 L20.5857864,12.4142136 C20.2107137,12.7892863 20,13.2979941 20,13.8284271 L20,26 C20,26.5522847 19.5522847,27 19,27 L1,27 C0.44771525,27 6.76353751e-17,26.5522847 0,26 L0,1 C-6.76353751e-17,0.44771525 0.44771525,1.01453063e-16 1,0 Z"
-                        ></path>
+                        <path d="M1,0 L23,0 C23.5522847,-1.01453063e-16 24,0.44771525 24,1 L24,8.17157288 C24,8.70200585 23.7892863,9.21071368 23.4142136,9.58578644 L20.5857864,12.4142136 C20.2107137,12.7892863 20,13.2979941 20,13.8284271 L20,26 C20,26.5522847 19.5522847,27 19,27 L1,27 C0.44771525,27 6.76353751e-17,26.5522847 0,26 L0,1 C-6.76353751e-17,0.44771525 0.44771525,1.01453063e-16 1,0 Z"></path>
                       </svg>
                     </div>
                     <div class="paper"></div>
@@ -229,45 +219,53 @@
             <br />
           </div>
         </div>
+
+        <input type="hidden" name="college" value="<%= college %>" />
+        <input type="hidden" name="program" value="<%= program %>" />
+        <input type="hidden" name="email" value="<%= email %>" />
       </form>
 
       <!-- Toggle Script: Disable candidate radios when abstain checkbox is checked -->
       <script>
-                document.querySelectorAll(".abstain-checkbox").forEach((checkbox) => {
-                  checkbox.addEventListener("change", function () {
-                    const group = this.getAttribute("data-group");
-                    const radios = document.querySelectorAll('input[name="' + group + '"].candidate-radio');
-                    if (this.checked) {
-                      radios.forEach((radio) => {
-                        radio.disabled = true;
-                        radio.checked = false;
+                      document.querySelectorAll(".abstain-checkbox").forEach((checkbox) => {
+                        checkbox.addEventListener("change", function () {
+                          const group = this.getAttribute("data-group");
+                          const radios = document.querySelectorAll('input[name="' + group + '"].candidate-radio');
+                          if (this.checked) {
+                            radios.forEach((radio) => {
+                              radio.disabled = true;
+                              radio.checked = false;
+                            });
+                          } else {
+                            radios.forEach((radio) => {
+                              radio.disabled = false;
+                            });
+                          }
+                        });
                       });
-                    } else {
-                      radios.forEach((radio) => {
-                        radio.disabled = false;
-                      });
-                    }
-                  });
-                });
 
-                // On form submission, for each group, if nothing is selected (and the abstain checkbox is not checked), add a hidden input with the abstain value.
-                document.getElementById("voteForm").addEventListener("submit", function (e) {
+                      // On form submission, for each group, if nothing is selected (and the abstain checkbox is not checked), add a hidden input with the abstain value.
+                      document.getElementById("voteForm").addEventListener("submit", function (e) {
           const groups = ["president", "vicePresident", "governor", "viceGovernor", "boardMember", "senator"];
           groups.forEach(function (group) {
+            // Remove any previously added hidden inputs for this group
+            document.querySelectorAll('input.hidden-' + group).forEach(el => el.remove());
+
+            // Check if a candidate is already selected in this group
             const selected = document.querySelectorAll('input[name="' + group + '"]:checked');
             if (selected.length === 0) {
               let abstainValue;
               if (group === "senator") {
-                // For senators, no separate abstain checkbox is in the UI.
-                // We embed the default abstain candidate from EJS and wrap it in an array.
+                // For senators, no separate abstain checkbox exists.
+                // Embed the default abstain candidate from EJS and wrap it in an array.
                 let senAbstainCandidate = <%- JSON.stringify(abstainSenator) %>;
                 if (senAbstainCandidate) {
                   abstainValue = JSON.stringify([senAbstainCandidate]);
                 }
               } else {
+                // Get the abstain checkbox for this group (note: these inputs do NOT have a name)
                 const abstainInput = document.querySelector('input[data-group="' + group + '"].abstain-checkbox');
-                if (abstainInput) {
-                  // Use the value from the abstain checkbox (already JSON.stringified in the value attribute)
+                if (abstainInput && abstainInput.checked) {
                   abstainValue = abstainInput.value;
                 }
               }
@@ -276,6 +274,8 @@
                 hidden.type = "hidden";
                 hidden.name = group;
                 hidden.value = abstainValue;
+                // Tag the hidden input so we can remove it next time, if needed
+                hidden.classList.add("hidden-" + group);
                 this.appendChild(hidden);
               }
             }
