made otp-verification in otp-verification folder

--- a/public/css/contact.css
+++ b/public/css/contact.css
@@ -98,6 +98,7 @@
   line-height: normal;
   height: auto;
   cursor: pointer;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px, rgba(0, 0, 0, 0.06) 0px 2px 4px;
 }
 
 form {
