--- a/public/voter/css/review.css
+++ b/public/voter/css/review.css
@@ -41,7 +41,6 @@
 }
 
 .review {
-  width: 100;
   background: var(--color-lighter-yellow);
   border-radius: 2em;
   min-height: 80dvh;
@@ -49,10 +48,12 @@
 }
 
 .review {
-  width: 100%;
+  display: flex;
+  flex-direction: column;
+  width: 60vw;
   height: 100%;
   --color: #e1e1e1;
-  background-color: #f3f3f3;
+  background: var(--color-lighter-yellow);
   background-image: linear-gradient(0deg, transparent 24%, var(--color) 25%, var(--color) 26%, transparent 27%, transparent 74%, var(--color) 75%, var(--color) 76%, transparent 77%, transparent),
     linear-gradient(90deg, transparent 24%, var(--color) 25%, var(--color) 26%, transparent 27%, transparent 74%, var(--color) 75%, var(--color) 76%, transparent 77%, transparent);
   background-size: 55px 55px;
@@ -60,10 +61,6 @@
 
 .review h3 {
   color: white;
-}
-
-.content-main {
-  min-height: 80dvh;
 }
 
 .review {
@@ -86,7 +83,7 @@
 
 /* Card for Candidates */
 .card {
-  width: 60vw;
+  width: 100%;
   min-height: 150px; /* Ensures it doesn’t collapse */
   height: auto; /* Expands based on content */
   background: #262626;
@@ -94,6 +91,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  text-align: center;
 }
 
 .smallIcon {
@@ -104,6 +102,7 @@
   background-color: #ff5858;
   padding-left: 2%;
   padding-top: 2%;
+  /* text-align: center; */
 }
 
 .smallIcon {
@@ -116,8 +115,8 @@
   background: linear-gradient(120deg, #e0e0e0 30%, #f0f0f0 38%, #f0f0f0 40%, #e0e0e0 48%);
   /* margin-top: 2%; */
   /* margin: 2%; */
-  margin-right: 2%;
-  margin-bottom: 2%;
+  /* margin-right: 2%;
+  margin-bottom: 2%; */
   background-size: 200% 100%;
   background-position: 100% 0;
   animation: load89234 2s infinite;
