--- a/public/voter/css/vote.css
+++ b/public/voter/css/vote.css
@@ -17,8 +17,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* background-color: var(--color-lighter-yellow); */
-  background-color: white;
+  background-color: var(--color-lighter-yellow);
   min-height: 80vh;
   border-radius: 2em;
   color: black;
@@ -30,7 +29,6 @@
   width: 100%;
   height: 100%;
   --color: #e1e1e1;
-  background-color: #f3f3f3;
   background-image: linear-gradient(0deg, transparent 24%, var(--color) 25%, var(--color) 26%, transparent 27%, transparent 74%, var(--color) 75%, var(--color) 76%, transparent 77%, transparent),
     linear-gradient(90deg, transparent 24%, var(--color) 25%, var(--color) 26%, transparent 27%, transparent 74%, var(--color) 75%, var(--color) 76%, transparent 77%, transparent);
   background-size: 55px 55px;
@@ -52,6 +50,9 @@
   justify-content: space-between;
 } */
 
+.ballot-choice {
+}
+
 .ballot-choices img {
   width: 5em;
   height: auto;
@@ -64,12 +65,6 @@
 #ballot-senator input[type="checkbox"] {
   display: none;
 }
-
-/* .ballot-choices label {
-  display: block;
-  border: 2px solid #707070;
-  border-radius: 0.4em;
-} */
 
 .ballot-choices input[type="radio"]:checked + label {
   background: var(--color-selected-bg);
@@ -246,11 +241,13 @@
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
+  width: 100%;
+  height: 100%;
   /* width: 80px; */
   /* min-height: 80px; */
   border-radius: 0.5rem;
   border: 2px solid #b5bfd9;
-  background-color: #fff;
+  background-color: #faf2db;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
   transition: 0.15s ease;
   cursor: pointer;
@@ -635,12 +632,4 @@
 
 .content {
   flex-direction: column;
-}
-
-.header-nav-content p {
-  color: #f2ddb4;
-}
-
-.header-nav-content {
-  gap: 2rem;
 }
