--- a/views/voter/review.ejs
+++ b/views/voter/review.ejs
@@ -4,10 +4,12 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Voting System</title>
-
+    <link rel="stylesheet" type="text/css" href="css/index.css" />
     <link rel="stylesheet" type="text/css" href="voter/css/index-voter.css" />
     <link rel="stylesheet" type="text/css" href="voter/css/review.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Poppins:wght@400;700&display=swap" rel="stylesheet" />
+     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Poppins:wght@400;700&display=swap" rel="stylesheet" />
+       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
+   
   </head>
 
   <body>
@@ -17,9 +19,9 @@
       </div>
       <nav class="header-nav">
         <ul class="header-nav-content">
-          <li id="active-link">Vote</li>
+          <li>Vote</li>
           <p>|</p>
-          <li>Review</li>
+          <li id="active-link">Review</li>
           <p>|</p>
           <li>Verify</li>
           <div class="dropdown">
@@ -51,7 +53,8 @@
       </div>
 
       <div class="content-main">
-        <p><i>Please REVIEW your votes before SUBMITTING BALLOT to the Blockchain</i></p>
+       
+        <p><i>Please REVIEW your votes before SUBMITTING BALLOT to the Blockchain.</i></p>
         <br />
         <div class="review">
           <br />
@@ -253,13 +256,19 @@
       </div>
     </div>
 
-    <div class="footer">
+    <footer class="footer">
       <div class="footer-left">
-        <p>OCTOBER 23, 2024 - 04:17 AM</p>
+        <img src="img/calendar.png" class="footer-img" />
+        <p id="datetime">OCTOBER 23, 2024 - 04:17 AM</p>
       </div>
-      <div class="footer-right">
-        <p>© 2024 - Fourmula 1</p>
+
+      <div class="footer-center">
+        <img src="img/copyright.png" class="footer-img" id="copyright-img" />
+        <p>2025 - Fourmula 1</p>
       </div>
-    </div>
+      <div class="footer-right"></div>
+    </footer>
+    </script>
+    <script src="js/index.js"></script>
   </body>
 </html>
